@@ -27,7 +27,7 @@
   implementation of the mandated C99/C++ preprocessor functionality packed behind 
   a simple to use interface, which integrates well with the well known idioms 
   of the Standard Template Library (STL).</P>
-<P dir="ltr">The <tt>Wave</tt> C++ preprocessor is not a monolitic application, 
+<P dir="ltr">The <tt>Wave</tt> C++ preprocessor is not a monolithic application, 
   it's rather a modular library, which exposes mainly a context object and an 
   iterator interface. The context object helps to configure the actual preprocessing 
   process (as search path's, predefined macros, etc.). The exposed iterators are 
@@ -87,7 +87,7 @@ preprocessing, but allows to use Wave for all of the IDL derivatives. </P>
 <font size="2">Distributed under the Boost Software License, Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) </font> </p>
 <span class="updated"></span>
 <p class="copyright"><span class="updated">Last updated: 
-  <!-- #BeginDate format:fcAm1m -->Sunday, May 15, 2005  12:23<!-- #EndDate -->
+  <!-- #BeginDate format:fcAm1m -->Wednesday, December 14, 2005  10:58<!-- #EndDate -->
 </span>  </p>
 </body>
 </html>
